jupyterhub/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "jupyterhub"
  namespace: "default"
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: cluster-issuer-letsencrypt
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.org/client-max-body-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 7200s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 7200s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 7200s
    nginx.ingress.kubernetes.io/websocket-services: proxy-public
    nginx.org/websocket-services: proxy-public
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  tls:
  - hosts:
    - "host"
    secretName: "cert-jupyterhub"
  rules:
  - host: "host"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: "proxy-public"
            port:
              number: 80
